crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__control_healthcheck_result_unhealthy_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "healthcheck_result",
  "id": "hc_123",
  "status": "unhealthy",
  "error": "user healthcheck returned False"
}
