crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__control_healthcheck_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: req
---
{
  "type": "healthcheck",
  "id": "hc_123"
}
