crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__control_idle_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "idle",
  "slot": "550e8400-e29b-41d4-a716-446655440000"
}
