crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_cancelled_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "cancelled",
  "id": "pred_123"
}
