crates/coglet/src/bridge/snapshots/coglet__bridge__protocol__tests__slot_done_serializes.snap
---
source: coglet/src/bridge/protocol.rs
expression: resp
---
{
  "type": "done",
  "id": "pred_123",
  "output": "final result",
  "predict_time": 1.234
}
